--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Sample website</h1>
-    <script src="scripts.js"></script>    	
+    <div>
+        <h1>Wilfred Wallace</h1>
+        <h2>17 years old</h2>
+        <h2>FUture software engineer</h2>
+    </div>
+    <div>
+        <h1>Projects</h1>
+        <h2>Solar panel automatic efficiency program</h2>
+    </div>
 </body>
 </html>
