--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0>
     <title>Website example</title>
-    <link rel="style" href="styles.css">
+    <link rel="styles" href="styles.css">
 </head>
 <body>
     <div>
         <h1>Wilfred Wallace</h1>
         <h2>17 years old</h2>
-        <h2>FUture software engineer</h2>
+        <h2>Future software engineer</h2>
     </div>
     <div>
         <h1>Projects</h1>
