--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0>
     <title>Website example</title>
-    <link rel="styles" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div>
