--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0>
     <title>Website example</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <div>
@@ -15,6 +15,9 @@
     <div>
         <h1>Projects</h1>
         <h2>Solar panel automatic efficiency program</h2>
+    </div>
+    <div>
+        <h1>iteration like one</h1>
     </div>
 </body>
 </html>
