--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0>
     <title>Website example</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <div>
