--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <div>
+    <div class='Intro'>
         <h1>Wilfred Wallace</h1>
         <h2>17 years old</h2>
         <h2>Future software engineer</h2>
