--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2>Solar panel automatic efficiency program</h2>
     </div>
     <div>
-        <h1>iteration like one</h1>
+        <h1>iteration like two</h1>
     </div>
 </body>
 </html>
