--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Projects</h1>
         <h2>Solar panel automatic efficiency program</h2>
     </div>
-    <div>
+    <div class="Iteration">
         <h1>iteration like two</h1>
     </div>
 </body>
