--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h2>17 years old</h2>
         <h2>Future software engineer</h2>
     </div>
-    <div>
+    <div class='Projects'>
         <h1>Projects</h1>
         <h2>Solar panel automatic efficiency program</h2>
     </div>
