--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <div class='Projects'>
         <h1>Projects</h1>
         <h2>Solar panel automatic efficiency program</h2>
+        <p>This project was undertaken initially as coursework during my A-levels and has been updated/developed many times since. The code uses a weather API to create a 
+            prediction for how much energy the users solar panels are likely to generate. It uses this information along with the size of the users battery and their daily 
+            energy usage to calculate an optimum energy plan that saves the user money.</p>
     </div>
     <div class="Iteration">
         <h1>iteration like two</h1>
