--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             prediction for how much energy the users solar panels are likely to generate. It uses this information along with the size of the users battery and their daily 
             energy usage to calculate an optimum energy plan that saves the user money.</p>
     </div>
-    <button class='button'>Button</button>
+    <button class='button'>Read more</button>
     <div class="Iteration">
         <h1>iteration like two</h1>
     </div>
