--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </div>
     <div class='Projects'>
         <h1 class='center'>Projects</h1>
-        <h2 class = 'center'>Solar panel automatic efficiency program</h2>
-        <p class = 'center'>This project was undertaken initially as coursework during my A-levels and has been updated/developed many times since. The code uses a weather API to create a 
+        <h2 class = 'left'>Solar panel automatic efficiency program</h2>
+        <p class = 'left'>This project was undertaken initially as coursework during my A-levels and has been updated/developed many times since. The code uses a weather API to create a 
             prediction for how much energy the users solar panels are likely to generate. It uses this information along with the size of the users battery and their daily 
             energy usage to calculate an optimum energy plan that saves the user money.</p>
         <button class='button' class='left'>Read more</button>
