--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class='Intro'>
         <h1>Wilfred Wallace</h1>
         <h2>17 years old</h2>
-        <h2 class='left'>Future software engineer</h2>
+        <h2>Future software engineer</h2>
     </div>
     <div class='Projects'>
         <h1>Projects</h1>
