--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             prediction for how much energy the users solar panels are likely to generate. It uses this information along with the size of the users battery and their daily 
             energy usage to calculate an optimum energy plan that saves the user money.</p>
         <button class='button' class='left'>Read more</button>
+        <h2>Blackjack using OOP</h2>
+        <h2>Momentum demonstaration website</h2>
     </div>
     <div class="Iteration">
         <h1>iteration like 4</h1>
