--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewpoint" content="width=device-width", initial-scale=1.0>
     <title>Website example</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script>
+        function buttonclicked() {
+            document.getElementById("demo").innerHTML = "Hello World";
+        }
+    </script>
 </head>
 <body>
     <div class='Intro'>
@@ -18,7 +23,7 @@
         <p>This project was undertaken initially as coursework during my A-levels and has been updated/developed many times since. The code uses a weather API to create a 
             prediction for how much energy the users solar panels are likely to generate. It uses this information along with the size of the users battery and their daily 
             energy usage to calculate an optimum energy plan that saves the user money.</p>
-        <button class='button' class='left'>Read more</button>
+        <button onclick="buttonclicked()" class='button' class='left'>Read more</button>
         <h2>Blackjack using OOP</h2>
         <h2>Momentum demonstaration website</h2>
     </div>
