--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             energy usage to calculate an optimum energy plan that saves the user money.</p>
         <button onclick="buttonclicked()" class='button' class='left'>Read more</button>
         <h2>Blackjack using OOP</h2>
+        <p id = 'demo'> </p>
         <h2>Momentum demonstaration website</h2>
     </div>
     <div class="Iteration">
