--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script>
         function buttonclicked() {
-            document.getElementById("demo").innerHTML = "Hello World";
+            document.getElementById("demo").innerHTML = "This project was undertaken initially as coursework during my A-levels and has been updated/developed many times since. The code uses a weather API to create a prediction for how much energy the users solar panels are likely to generate. It uses this information along with the size of the users battery and their daily energy usage to calculate an optimum energy plan that saves the user money.";
         }
     </script>
 </head>
@@ -20,9 +20,7 @@
     <div class='Projects'>
         <h1>Projects</h1>
         <h2>Solar panel automatic efficiency program</h2>
-        <p>This project was undertaken initially as coursework during my A-levels and has been updated/developed many times since. The code uses a weather API to create a 
-            prediction for how much energy the users solar panels are likely to generate. It uses this information along with the size of the users battery and their daily 
-            energy usage to calculate an optimum energy plan that saves the user money.</p>
+        <p id = 'demo'></p>
         <button onclick="buttonclicked()" class='button'>Read more</button>
         <h2>Blackjack using OOP</h2>
         <p id = 'demo'> </p>
