--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script>
         function buttonclicked() {
-            document.getElementById("demo").innerHTML = "This project was undertaken initially as coursework during my A-levels and has been updated/developed many times since. The code uses a weather API to create a prediction for how much energy the users solar panels are likely to generate. It uses this information along with the size of the users battery and their daily energy usage to calculate an optimum energy plan that saves the user money.";
+            document.getElementById("Solar more/less").innerHTML = "This project was undertaken initially as coursework during my A-levels and has been updated/developed many times since. The code uses a weather API to create a prediction for how much energy the users solar panels are likely to generate. It uses this information along with the size of the users battery and their daily energy usage to calculate an optimum energy plan that saves the user money.";
         }
     </script>
 </head>
@@ -20,10 +20,9 @@
     <div class='Projects'>
         <h1>Projects</h1>
         <h2>Solar panel automatic efficiency program</h2>
-        <p id = 'demo'></p>
+        <p id = 'Solar more/less'></p>
         <button onclick="buttonclicked()" class='button'>Read more</button>
         <h2>Blackjack using OOP</h2>
-        <p id = 'demo'> </p>
         <h2>Momentum demonstaration website</h2>
     </div>
     <div class="Iteration">
