--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 document.getElementById("buttonMoreLess").innerHTML = "Read more";
                 moreLess = true;
             }
+            document.querySelector("h3).style.color = "yellow";
         }
     </script>
 </head>
@@ -28,11 +29,13 @@
     </div>
     <div class='Projects'>
         <h1>Projects</h1>
-        <h2>Solar panel automatic efficiency program</h2>
+        <h2>Undertaken</h2>
+        <h3>Solar panel automatic efficiency program</h2>
         <p id = 'Solar more/less'></p>
         <button onclick="buttonclicked()" class='button' id = "buttonMoreLess">Read more</button>
-        <h2>Blackjack using OOP</h2>
-        <h2>Momentum demonstaration website</h2>
+        <h2>For the future</h2>
+        <h3>Blackjack using OOP</h2>
+        <h3>Momentum demonstaration website</h2>
     </div>
     <div class="Iteration">
         <h1>iteration like 4</h1>
