--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
                 document.getElementById("buttonMoreLess").innerHTML = "Read more";
                 moreLess = true;
             }
-            document.querySelector("h3).style.color = "yellow";
+            document.querySelector("h3").style.color = "yellow";
+            document.querySelector(class = "projects").style.color = "yellow";
         }
     </script>
 </head>
