--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <script src = "index.js" defer></script>
 </head>
 <body>
+    <div class='menu'>
+        <button class="button">Button</button>
+        <button class="button">Button</button>
+        <button class="button">Button</button>
+        <button class="button">Button</button>
+    </div>
     <div class='Intro'>
         <h1>Wilfred Wallace</h1>
         <h2>17 years old</h2>
