--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class='menu'>
-        <button class="button">Button</button>
-        <button class="button">Button</button>
-        <button class="button">Button</button>
-        <button class="button">Button</button>
+        <button class="menuButt">Button</button>
+        <button class="menuButt">Button</button>
+        <button class="menuButt">Button</button>
+        <button class="menuButt">Button</button>
     </div>
     <div class='Intro'>
         <h1>Wilfred Wallace</h1>
