--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <h2>For the future</h2>
         <h3>Blackjack using OOP</h2>
         <h3>Momentum demonstaration website</h2>
+        <h3>Hairdressers app</h3>
+        <h3>Phone only allows messaging and camera</h3>
     </div>
     <div class="Iteration">
         <h1>iteration like 4</h1>
