--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <button class="menuButt">Projects</button>
         <button class="menuButt">CV</button>
         <button class="menuButt">Achievements</button>
+        <button class="menuButt">Format settings</button>
     </div>
     <div class='Intro'>
         <h1>Wilfred Wallace</h1>
