--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
         <h3>Solar panel automatic efficiency program</h2>
         <p id = 'Solar more/less'></p>
         <button onclick="buttonclicked()" class='button' id = "buttonMoreLess">Read more</button>
-        <h2>For the future</h2>
-        <h3>Blackjack using OOP</h2>
-        <h3>Momentum demonstaration website</h2>
+        <h2>Ideas for the future</h2>
+        <h3>Blackjack using OOP</h3>
+        <h3>Momentum demonstaration website</h3>
         <h3>Hairdressers app</h3>
         <h3>Phone only allows messaging and camera</h3>
+        <h3>Data structure demonstrator website</h3>
+        <h3>Digital mirror thingy mabobby</h3>
     </div>
     <div class="Iteration">
         <h1>iteration like 4</h1>
