--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <h3>Phone only allows messaging and camera</h3>
         <h3>Data structure demonstrator website</h3>
         <h3>Digital mirror thingy mabobby</h3>
+        <h3>Nueral network of sorts</h3>
     </div>
     <p><br><br><br><br><br><br><br><br><br></p>
 </body>
