--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class='menu'>
-        <button class="menuButt">Overview</button>
+        <button onclick="document.location='Projects.html'" class="menuButt">Overview</button>
         <button class="menuButt">Projects</button>
         <button class="menuButt">CV</button>
         <button class="menuButt">Achievements</button>
