--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
     <title>Website example</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <script src = "index.js" defer></script>
 </head>
 <body>
     <div class='menu'>
-        <button onclick="document.location='Projects.html'" class="menuButt">Overview</button>
-        <button class="menuButt">Projects</button>
+        <button onclick="document.location='index.html'" class="menuButt">Overview</button>
+        <button onclick="document.location='Projects.html'" class="menuButt">Projects</button>
         <button class="menuButt">CV</button>
         <button class="menuButt">Achievements</button>
         <button class="menuButt">Format settings</button>
@@ -19,21 +18,6 @@
         <h1>Wilfred Wallace</h1>
         <h2>17 years old</h2>
         <h2>Future software engineer</h2>
-    </div>
-    <div class='Projects'>
-        <h1>Projects</h1>
-        <h2>Undertaken</h2>
-        <h3>Solar panel automatic efficiency program</h2>
-        <p id = 'Solar more/less'></p>
-        <button onclick="buttonclicked()" class='button' id = "buttonMoreLess">Read more</button>
-        <h2>Ideas for the future</h2>
-        <h3>Blackjack using OOP</h3>
-        <h3>Momentum demonstaration website</h3>
-        <h3>Hairdressers app</h3>
-        <h3>Phone only allows messaging and camera</h3>
-        <h3>Data structure demonstrator website</h3>
-        <h3>Digital mirror thingy mabobby</h3>
-        <h3>Nueral network of sorts</h3>
     </div>
     <p><br><br><br><br><br><br><br><br><br></p>
 </body>
