--- a/Projects.html
+++ b/Projects.html
@@ -8,6 +8,13 @@
     <script src = "index.js" defer></script>
 </head>
 <body>
+    <div class='menu'>
+        <button onclick="document.location='index.html'" class="menuButt">Overview</button>
+        <button onclick="document.location='Projects.html'" class="menuButt">Projects</button>
+        <button class="menuButt">CV</button>
+        <button class="menuButt">Achievements</button>
+        <button class="menuButt">Format settings</button>
+    </div>
     <div class='Projects'>
         <h1>Projects</h1>
         <h2>Undertaken</h2>
