--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
-    <title>Website example</title>
+    <title>Wilf Wallace</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <div class='menu'>
-        <button onclick="document.location='index.html'" class="menuButt">Overview</button>
+        <button onclick="document.location='index.html'" class="menuButt">Home</button>
         <button onclick="document.location='projects.html'" class="menuButt">Projects</button>
         <button onclick="document.location='cv.html'" class="menuButt">CV</button>
         <button onclick="document.location='achievements.html'" class="menuButt">Achievements</button>
