--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
-    <title>Website example</title>
+    <title>WIlf Wallace projects</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src = "index.js" defer></script>
 </head>
