--- a/projects.html
+++ b/projects.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class='menu'>
-        <button onclick="document.location='index.html'" class="menuButt">Overview</button>
-        <button onclick="document.location='Projects.html'" class="menuButt">Projects</button>
-        <button class="menuButt">CV</button>
-        <button class="menuButt">Achievements</button>
+        <button onclick="document.location='index.html'" class="menuButt">Home</button>
+        <button onclick="document.location='projects.html'" class="menuButt">Projects</button>
+        <button onclick="document.location='cv.html'" class="menuButt">CV</button>
+        <button onclick="document.location='achievements.html'" class="menuButt">Achievements</button>
         <button class="menuButt">Format settings</button>
     </div>
     <div class='Projects'>
