--- a/achievements.html
+++ b/achievements.html
@@ -6,3 +6,12 @@
     <title>Wilf Wallace achievements</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+<body>
+    <div class='menu'>
+        <button onclick="document.location='index.html'" class="menuButt">Home</button>
+        <button onclick="document.location='projects.html'" class="menuButt">Projects</button>
+        <button onclick="document.location='cv.html'" class="menuButt">CV</button>
+        <button onclick="document.location='achievements.html'" class="menuButt">Achievements</button>
+        <button class="menuButt">Format settings</button>
+    </div>
+</body>
