--- a/achievements.html
+++ b/achievements.html
@@ -34,5 +34,16 @@
             <li>English Language-6</li>
             <li>English Literature-5</li>
         </ul>
+        <h1>DofE</h1>
+        <ul>
+            <li>Bronze</li>
+            <li>Silver</li>
+            <li>Gold(in the works)</li>
+        </ul>
+        <h1>UK Bebras Challenge</h1>
+        <ul>
+            <li>2024-Gold award</li>
+            <li>2022-Gold award</li>
+        </ul>
     </div>
 </body>
