--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
         <h2>Undertaken</h2>
         <h3>Solar panel automatic efficiency program</h2>
         <p id = 'Solar more/less'></p>
-        <button onclick="buttonclicked()" class='button' id = "buttonMoreLess">Read more</button>
+        <button onclick="buttonclicked()" class='readMoreLessButton' id = "buttonMoreLess">Read more</button>
         <h2>Ideas for the future</h2>
         <h3>Blackjack using OOP</h3>
         <h3>Momentum demonstaration website</h3>
