--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
-    <title>WIlf Wallace projects</title>
+    <title>Wilf Wallace projects</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src = "index.js" defer></script>
 </head>
@@ -15,7 +15,7 @@
         <button onclick="document.location='achievements.html'" class="menuButt">Achievements</button>
         <button class="menuButt">Format settings</button>
     </div>
-    <div class='Projects'>
+    <div>
         <h1>Projects</h1>
         <h2>Undertaken</h2>
         <h3>Solar panel automatic efficiency program</h2>
