--- a/achievements.html
+++ b/achievements.html
@@ -14,7 +14,7 @@
         <button onclick="document.location='achievements.html'" class="menuButt">Achievements</button>
         <button class="menuButt">Format settings</button>
     </div>
-    <div class='Projects'>
+    <div>
         <h1>A levels</h1>
         <h3>Maths</h3>
         <h3>Computer Science</h3>
