--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
         <button onclick="document.location='achievements.html'" class="menuButt">Achievements</button>
         <button class="menuButt">Format settings</button>
     </div>
-    <div>
+    <div class='content'>
         <h1>Projects</h1>
         <h2>Undertaken</h2>
         <h3>Solar panel automatic efficiency program</h2>
