--- a/achievements.html
+++ b/achievements.html
@@ -14,12 +14,13 @@
         <button onclick="document.location='achievements.html'" class="menuButt">Achievements</button>
         <button class="menuButt">Format settings</button>
     </div>
-    <div>
+    <div class='content'>
         <h1>A levels</h1>
         <h3>Maths</h3>
         <h3>Computer Science</h3>
         <h3>Physics</h3>
-        
+    </div>
+    <div class = 'content'>
         <h1>GCSEs</h1>
         <h3>Maths-9</h3>
         <h3>Computer Science-9</h3>
