--- a/cv.html
+++ b/cv.html
@@ -14,7 +14,7 @@
         <button onclick="document.location='achievements.html'" class="menuButt">Achievements</button>
         <button class="menuButt">Format settings</button>
     </div>
-    <div>
+    <div class='content'>
         <h1>Programming languages I am experience in</h1>
         <h3>Python</h3>
         <p>This is the language that I have the most experience in and feel very comfortable using all sorts of programming paradigms, data structures and writing algorithms.</p>
