--- a/achievements.html
+++ b/achievements.html
@@ -14,13 +14,13 @@
         <button onclick="document.location='achievements.html'" class="menuButt">Achievements</button>
         <button class="menuButt">Format settings</button>
     </div>
-    <div class='content'>
+    <div class='achievements1'>
         <h1>A levels</h1>
         <h3>Maths</h3>
         <h3>Computer Science</h3>
         <h3>Physics</h3>
     </div>
-    <div class = 'content'>
+    <div class = 'achievements2'>
         <h1>GCSEs</h1>
         <h3>Maths-9</h3>
         <h3>Computer Science-9</h3>
@@ -43,7 +43,5 @@
         <h1>UK Bebras Challenge</h1>
         <h3>2024-Gold award</h3>
         <h3>2022-Gold award</h3>
-    </div>
-    <div class = 'content'>
     </div>
 </body>
