--- a/cv.html
+++ b/cv.html
@@ -15,7 +15,7 @@
         <button class="menuButt">Format settings</button>
     </div>
     <div class='content'>
-        <h1>Programming languages I am experience in</h1>
+        <h1>Programming languages I have experience in</h1>
         <h3>Python</h3>
         <p>This is the language that I have the most experience in and feel very comfortable using all sorts of programming paradigms, data structures and writing algorithms.</p>
         <h3>HTML</h3>
