--- a/achievements.html
+++ b/achievements.html
@@ -33,13 +33,13 @@
         <h3>English Language-6</h3>
         <h3>English Literature-5</h3>
     </div>
-    <div class = 'content'>
+    <div class = 'achievements1'>
         <h1>DofE</h1>
         <h3>Bronze</h3>
         <h3>Silver</h3>
         <h3>Gold(in the works)</h3>
     </div>
-    <div class = 'content'>
+    <div class = 'achievements2'>
         <h1>UK Bebras Challenge</h1>
         <h3>2024-Gold award</h3>
         <h3>2022-Gold award</h3>
