--- a/achievements.html
+++ b/achievements.html
@@ -14,34 +14,38 @@
         <button onclick="document.location='achievements.html'" class="menuButt">Achievements</button>
         <button class="menuButt">Format settings</button>
     </div>
-    <div class='achievements1'>
-        <h1>A levels</h1>
-        <h3>Maths</h3>
-        <h3>Computer Science</h3>
-        <h3>Physics</h3>
+    <div class = 'left'>
+        <div class='achievements'>
+            <h1>A levels</h1>
+            <h3>Maths</h3>
+            <h3>Computer Science</h3>
+            <h3>Physics</h3>
+        </div>
+        <div class = 'achievements'>
+            <h1>GCSEs</h1>
+            <h3>Maths-9</h3>
+            <h3>Computer Science-9</h3>
+            <h3>Physics-9</h3>
+            <h3>Chemistry-9</h3>
+            <h3>Biology-8</h3>
+            <h3>Design and Technology-8</h3>
+            <h3>Geography-8</h3>
+            <h3>Business-7</h3>
+            <h3>English Language-6</h3>
+            <h3>English Literature-5</h3>
+        </div>
     </div>
-    <div class = 'achievements2'>
-        <h1>GCSEs</h1>
-        <h3>Maths-9</h3>
-        <h3>Computer Science-9</h3>
-        <h3>Physics-9</h3>
-        <h3>Chemistry-9</h3>
-        <h3>Biology-8</h3>
-        <h3>Design and Technology-8</h3>
-        <h3>Geography-8</h3>
-        <h3>Business-7</h3>
-        <h3>English Language-6</h3>
-        <h3>English Literature-5</h3>
-    </div>
-    <div class = 'achievements1'>
-        <h1>DofE</h1>
-        <h3>Bronze</h3>
-        <h3>Silver</h3>
-        <h3>Gold(in the works)</h3>
-    </div>
-    <div class = 'achievements2'>
-        <h1>UK Bebras Challenge</h1>
-        <h3>2024-Gold award</h3>
-        <h3>2022-Gold award</h3>
+    <div class = 'right'>
+        <div class = 'achievements'>
+            <h1>DofE</h1>
+            <h3>Bronze</h3>
+            <h3>Silver</h3>
+            <h3>Gold(in the works)</h3>
+        </div>
+        <div class = 'achievements'>
+            <h1>UK Bebras Challenge</h1>
+            <h3>2024-Gold award</h3>
+            <h3>2022-Gold award</h3>
+        </div>
     </div>
 </body>
