--- a/cv.html
+++ b/cv.html
@@ -23,6 +23,7 @@
         <h3>JavaScript</h3>
         <h1>Work Experience</h1>
         <h2>Renishaw</h2>
-        <p id='renishaw m/l'>During this work experience, I spent a week working in a team of 5 to design and produce a prototype of a green energy product. The product my team design was a speed bumb that converted GPE of the car into KE energy in the motor. My role in this project was to design the prototype using CAD software and 3D print it. At the end of the week, we presented our prototypes to the other teams and some renishaw employees. The main thing I took away from this week was how to work effectively in a team and how to present my ideas and findings to a crowd.</p>
+        <p id='renishaw m/l'></p>
+        <button onclick="renishawbuttonclicked()" class='readMoreLessButton' id = "renishaw m/l button">Read more</button>
     </div>
 </body>
