--- a/cv.html
+++ b/cv.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
     <title>Wilf Wallace CV</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src = "index.js" defer></script>
 </head>
 <body>
     <div class='menu'>
@@ -23,7 +24,7 @@
         <h3>JavaScript</h3>
         <h1>Work Experience</h1>
         <h2>Renishaw</h2>
-        <p id='renishaw m/l'></p>
-        <button onclick="renishawbuttonclicked()" class='readMoreLessButton' id = "renishaw m/l button">Read more</button>
+        <p id='renishaw-ml'></p>
+        <button onclick="renishawbuttonclicked()" class='readMoreLessButton' id = "renishaw-ml-button">Read more</button>
     </div>
 </body>
