--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button onclick="document.location='cv.html'" class="menuButt">CV</button>
         <button onclick="document.location='achievements.html'" class="menuButt">Achievements</button>
         <button class="menuButt">Format settings</button>
-        <img src='/WW.png' alt='WW logo' class='right'
+        <img src='/WW.png' alt='WW logo' class='right'>
     </div>
     <div class='Intro'>
         <h1>Wilfred Wallace</h1>
