--- a/achievements.html
+++ b/achievements.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
     <title>Wilf Wallace achievements</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <img src='WW.png' alt='WW logo' class='menu-image'>
 </head>
 <body>
     <div class='menu'>
