--- a/cv.html
+++ b/cv.html
@@ -6,6 +6,7 @@
     <title>Wilf Wallace CV</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src = "index.js" defer></script>
+    <img src='WW.png' alt='WW logo' class='menu-image'>
 </head>
 <body>
     <div class='menu'>
