--- a/achievements.html
+++ b/achievements.html
@@ -12,7 +12,7 @@
         <button onclick="document.location='projects.html'" class="menuButt">Projects</button>
         <button onclick="document.location='cv.html'" class="menuButt">CV</button>
         <button onclick="document.location='achievements.html'" class="menuButt">Achievements</button>
-        <button class="menuButt">Format settings</button>
+        <button onclick="document.location='format.html'" class="menuButt">Format settings</button>
         <img src='WW.png' alt='WW logo' class='menu-image'>
     </div>
     <div class = 'left'>
