--- a/projects.html
+++ b/projects.html
@@ -30,5 +30,6 @@
         <h3>Data structure demonstrator website</h3>
         <h3>Digital mirror thingy mabobby</h3>
         <h3>Nueral network of sorts</h3>
+        <h3>Football cool air hockey game with different types of players</h3>
     </div>
 </body>
