--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Wilf Wallace</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body>
+<body onload="set_style_from_cookie()">
     <div class='menu'>
         <button onclick="document.location='index.html'" class="menuButt">Home</button>
         <button onclick="document.location='projects.html'" class="menuButt">Projects</button>
