--- a/format.html
+++ b/format.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width", initial-scale=1.0>
   <title>Wilf Wallace</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
-  <link rel="alternate stylesheet" type="text/css" title="bright-mode" href="styles2.css">
+  <link rel="stylesheet" type="text/css" title="dark" href="styles.css">
+  <link rel="alternate stylesheet" type="text/css" title="pink" href="styles2.css">
 </head>
 <body>
   <div class = 'menu'>
@@ -15,5 +15,9 @@
         <button onclick="document.location='achievements.html'" class="menuButt">Achievements</button>
         <button onclick="document.location='format.html'" class="menuButt">Format settings</button>
         <img src='WW.png' alt='WW logo' class='menu-image'>
+  </div>
+  <div>
+    <button type="button" onclick="switch_style('dark');return false;" name="theme" value="Dark Theme" id="dark">Dark Theme</button>
+    <button type="button" onclick="switch_style('pink');return false;" name="theme" value="Pink Theme" id="pink">Pink Theme</button>
   </div>
 </body>
