--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
     <title>Wilf Wallace</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="alternate stylesheet" type="text/css" title="pink" href="styles2.css">
 </head>
 <body onload="set_style_from_cookie()">
     <div class='menu'>
