--- a/cv.html
+++ b/cv.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
     <title>Wilf Wallace CV</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <script src = "index.js" defer></script>
+    <script src = "index.js"></script>
 </head>
 <body>
     <div class='menu'>
