--- a/format.html
+++ b/format.html
@@ -6,6 +6,7 @@
   <title>Wilf Wallace</title>
   <link rel="stylesheet" type="text/css" title="dark" href="styles.css">
   <link rel="alternate stylesheet" type="text/css" title="pink" href="styles2.css">
+  <script src="index.js" defer></script>
 </head>
 <body>
   <div class = 'menu'>
