--- a/achievements.html
+++ b/achievements.html
@@ -8,7 +8,7 @@
     <link rel="alternate stylesheet" type="text/css" title="pink" href="styles2.css">
     <script src = "index.js" defer></script>
 </head>
-<body onload="set_style_from_cookies()">
+<body onload="set_style_from_cookie()">
     <div class='menu'>
         <button onclick="document.location='index.html'" class="menuButt">Home</button>
         <button onclick="document.location='projects.html'" class="menuButt">Projects</button>
