--- a/cv.html
+++ b/cv.html
@@ -6,8 +6,10 @@
     <title>Wilf Wallace CV</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src = "index.js"></script>
+    <link rel="alternate stylesheet" type="text/css" title="pink" href="styles2.css">
+    <script src = "index.js" defer></script>
 </head>
-<body>
+<body onload="set_style_from_cookie()">
     <div class='menu'>
         <button onclick="document.location='index.html'" class="menuButt">Home</button>
         <button onclick="document.location='projects.html'" class="menuButt">Projects</button>
