--- a/projects.html
+++ b/projects.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
     <title>Wilf Wallace projects</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles2.css"
     <script src = "index.js" defer></script>
 </head>
-<body>
+<body onload="set_style_from_cookie()">
     <div class='menu'>
         <button onclick="document.location='index.html'" class="menuButt">Home</button>
         <button onclick="document.location='projects.html'" class="menuButt">Projects</button>
