--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
     <title>Wilf Wallace projects</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="stylesheet" type="text/css" href="styles2.css"
+    <link rel="stylesheet" type="text/css" href="styles2.css">
     <script src = "index.js" defer></script>
 </head>
 <body onload="set_style_from_cookie()">
