--- a/achievements.html
+++ b/achievements.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
     <title>Wilf Wallace achievements</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" title="dark" href="styles.css">
     <link rel="alternate stylesheet" type="text/css" title="pink" href="styles2.css">
     <script src = "index.js" defer></script>
 </head>
