--- a/format.html
+++ b/format.html
@@ -19,6 +19,6 @@
   </div>
   <div class = 'formatButtons'>
     <button type="button" onclick="switch_style('dark');return false;" name="theme" value="Dark Theme" id="dark">Dark Theme</button>
-    <button type="button" onclick="switch_style('pink');return false;" name="theme" value="Pink Theme" id="pink">Pink Theme</button>
+    <button type="button" onclick="switch_style('pink');return false;" name="theme" value="Pink Theme" id="pink">Light Theme</button>
   </div>
 </body>
