--- a/format.html
+++ b/format.html
@@ -17,8 +17,8 @@
         <button onclick="document.location='format.html'" class="menuButt">Format settings</button>
         <img src='WW.png' alt='WW logo' class='menu-image'>
   </div>
-  <div class = 'readMoreLessButton'>
-    <button type="button" onclick="switch_style('dark');return false;" name="theme" value="Dark Theme" id="dark">Dark Theme</button>
-    <button type="button" onclick="switch_style('pink');return false;" name="theme" value="Pink Theme" id="pink">Light Theme</button>
+  <div>
+    <button type="button" onclick="switch_style('dark');return false;" name="theme" value="Dark Theme" id="dark" class="formatButtons">Dark Theme</button>
+    <button type="button" onclick="switch_style('pink');return false;" name="theme" value="Pink Theme" id="pink" class="formatButtons">Light Theme</button>
   </div>
 </body>
