Add future project ideas to projects.html

--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,9 @@
         <p id = 'Solar more/less'></p>
         <button onclick="solarbuttonclicked()" class='readMoreLessButton' id = "solar m/l button">Read more</button>
         <h2>Ideas for the future</h2>
+        <h3>Make solar panel efficiency algorithm write to a data set so I can make it AI powered later</h3>
+        <h3>Using kNN find where on earth a photo is from, country/gps</h3>
+        <p>Get images from Flickr with GPS info, represent each image with meaningful info and apply kNN</p>
         <h3>Blackjack using OOP</h3>
         <h3>Momentum demonstaration website</h3>
         <h3>Hairdressers app</h3>
