Add XOR Systems summer placement to work experience
Next add a button that displays a paragraph about my time there

--- a/cv.html
+++ b/cv.html
@@ -25,6 +25,7 @@
         <h3>CSS</h3>
         <h3>JavaScript</h3>
         <h1>Work Experience</h1>
+        <h2>XOR Systems summer placement</h2>
         <h2>Renishaw</h2>
         <p id='renishaw-ml'></p>
         <button onclick="renishawbuttonclicked()" class='readMoreLessButton' id = "renishaw-ml-button">Read more</button>
