--- a/achievements.html
+++ b/achievements.html
@@ -20,9 +20,9 @@
     <div class = 'left'>
         <div class='achievements'>
             <h1>A levels</h1>
-            <h3>Maths</h3>
-            <h3>Computer Science</h3>
-            <h3>Physics</h3>
+            <h3>Computer Science - A*</h3>
+            <h3>Maths - A</h3>
+            <h3>Physics - A</h3>
         </div>
         <div class = 'achievements'>
             <h1>GCSEs</h1>
@@ -43,7 +43,7 @@
             <h1>DofE</h1>
             <h3>Bronze</h3>
             <h3>Silver</h3>
-            <h3>Gold(in the works)</h3>
+            <h3>Gold</h3>
         </div>
         <div class = 'achievements'>
             <h1>UK Bebras Challenge</h1>
